--- a/demo/_tex_tables_templates/table_template.tex
+++ b/demo/_tex_tables_templates/table_template.tex
@@ -2,11 +2,11 @@
 \small
 \begin{tabular}{r c c c c c c c c}
 \toprule
-\textbf{Scheme}                       & \textbf{Estimator}         & $\bm{|e|_{1,\Omega}}$  & $\bmtvert \bm{E} \bmtvert_{\bm{\Omega}}$ & $\bm{\eta_r}$          & $\bm{\eta_J}$          & $\bm{\eta_{\mathrm{BC}}}$ & $\bm{\eta_{0,\mathrm{geo}}}$ & $\bm{\eta_{1,\mathrm{geo}}}$ \\ \midrule
-\textbf{FEM,} $\bm{\eta_1}$           & [fem-estimator]            & [fem-error]            & $\varnothing$                            & [fem-eta_r]            & [fem-eta_J]            & $\varnothing$             & $\varnothing$                & $\varnothing$                \\ \midrule
-\textbf{$\varphi$-FEM,} $\bm{\eta}$   & [phifem-bc-geo-estimator] & [phifem-bc-geo-error] & [phifem-bc-geo-total_error]             & [phifem-bc-geo-eta_r] & [phifem-bc-geo-eta_J] & [phifem-bc-geo-eta_BC]    & [phifem-bc-geo-eta_geo_0]     & [phifem-bc-geo-eta_geo_1]     \\ \midrule
-\textbf{$\varphi$-FEM,} $\bm{\eta_1}$ & [phifem-estimator]         & [phifem-error]         & [phifem-total_error]                     & [phifem-eta_r]         & [phifem-eta_J]         & $\varnothing$             & $\varnothing$                & $\varnothing$                \\ \midrule
-\textbf{$\varphi$-FEM,} $\bm{\eta_2}$ & [phifem-geo-estimator]     & [phifem-geo-error]     & [phifem-geo-total_error]                 & [phifem-geo-eta_r]     & [phifem-geo-eta_J]     & $\varnothing$             & [phifem-geo-eta_geo_0]         & [phifem-geo-eta_geo_1]         \\ \bottomrule 
+\textbf{Scheme}                       & \textbf{Estimator}         & $\bm{|e|_{1,\Omega}}$     & $\bm{E}$                          & $\bm{\eta_r}$         & $\bm{\eta_J}$         & $\bm{\eta_{\mathrm{BC}}}$ & $\bm{\eta_{0,\mathrm{geo}}}$ \\ \midrule
+\textbf{FEM,} $\bm{\eta_1}$           & [fem-estimator]            & [fem-h10_error]           & $\varnothing$                     & [fem-eta_r]           & [fem-eta_J]           & $\varnothing$             & $\varnothing$                \\ \midrule
+\textbf{$\varphi$-FEM,} $\bm{\eta}$   & [phifem-bc-geo-estimator]  & [phifem-bc-geo-h10_error] & [phifem-bc-geo-triple_norm_error] & [phifem-bc-geo-eta_r] & [phifem-bc-geo-eta_J] & [phifem-bc-geo-eta_BC]    & [phifem-bc-geo-eta_geo]      \\ \midrule
+\textbf{$\varphi$-FEM,} $\bm{\eta_1}$ & [phifem-estimator]         & [phifem-h10_error]        & [phifem-triple_norm_error]        & [phifem-eta_r]        & [phifem-eta_J]        & $\varnothing$             & $\varnothing$                \\ \midrule
+\textbf{$\varphi$-FEM,} $\bm{\eta_2}$ & [phifem-geo-estimator]     & [phifem-geo-h10_error]    & [phifem-geo-triple_norm_error]    & [phifem-geo-eta_r]    & [phifem-geo-eta_J]    & $\varnothing$             & [phifem-geo-eta_geo]         \\ \bottomrule 
 \end{tabular}
 \caption{}
 \label{tab:}
